composer.*: lock SilexView version

--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,7 @@
     "minimum-stability": "dev",
     "require": {
         "silex/silex": "1.1.2",
-        "hoffmann/silex-view": "dev-master",
+        "hoffmann/silex-view": "dev-master#0cbd1591cd2f3598583fc7f69eeea7c0d0ffe3f3",
         "twig/twig": ">=1.2.0"
     },
     "autoload": {
