README & composer.json desc

--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,6 @@
 {
     "name": "chr0n1x/nox",
-    "description": "personal blog / site",
+    "description": "STTTC-xtravaganza",
     "license": "MIT",
     "authors": [
         {
