--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,8 @@
         "nategood/httpful": "dev-master#3fae8a1dd30d49cc5b9c1371a2fc94166e943f2a",
         "silex/silex": "1.1.2",
         "twig/twig": ">=1.2.0",
-        "monolog/monolog": "1.7.0"
+        "monolog/monolog": "1.7.0",
+        "theseer/fdomdocument": "1.4.3"
     },
     "autoload": {
         "psr-0": {
