--- a/composer.json
+++ b/composer.json
@@ -18,6 +18,9 @@
         "monolog/monolog": "1.7.0",
         "theseer/fdomdocument": "1.4.3"
     },
+    "require-dev": {
+        "phpunit/phpunit": ">=3.7"
+    },
     "autoload": {
         "psr-0": {
             "Nox": "src"
