--- a/composer.json
+++ b/composer.json
@@ -19,7 +19,7 @@
         "theseer/fdomdocument": "1.4.3"
     },
     "require-dev": {
-        "phpunit/phpunit": ">=3.7"
+        "phpunit/phpunit": "3.7.28"
     },
     "autoload": {
         "psr-0": {
