--- a/.travis.yml
+++ b/.travis.yml
@@ -3,6 +3,7 @@ language: php
 php:
   - 5.4
   - 5.5
+  - 5.6
 before_script:
   - composer install
-script: cd tests && phpunit --coverage-text
+script: ./vendor/bin/phpunit --coverage-text
