--- a/composer.json
+++ b/composer.json
@@ -18,7 +18,8 @@
         "hoffmann/silex-view": "dev-master#0cbd159"
     },
     "require-dev": {
-        "phpunit/phpunit": "~4.0"
+        "phpunit/phpunit": "~4.0",
+        "squizlabs/php_codesniffer": "~2.1"
     },
     "autoload": {
         "psr-0": {
