--- a/.travis.yml
+++ b/.travis.yml
@@ -6,4 +6,4 @@ php:
   - 5.6
 before_script:
   - composer install
-script: ./vendor/bin/phpunit --coverage-text
+script: ./vendor/bin/phpcs --standard=PSR1,PSR2 src/ tests/ bootstrap/ public/ -n && ./vendor/bin/phpunit --coverage-text
